# Programacao_Paralela_e_Distribuida

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp
